rust/codec-html/src/snapshots/encode_nodes@include.json.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 534
expression: html
input_file: fixtures/nodes/include.json
---
<stencila-article data-root data-root="true">
  <article itemtype="https://schema.org/Article" itemscope>
    <div data-prop="content" slot="content">
      <stencila-include itemtype="https://schema.stenci.la/Include" itemscope source="heading.json">
        <meta itemprop="source" content="heading.json"/>
        <stencila-code-dependencies slot="code-dependencies">
          <div data-prop="codeDependencies">
          </div>
        </stencila-code-dependencies>
        <div data-prop="errors" slot="errors">
        </div>
        <div data-prop="content" slot="content">
        </div>
      </stencila-include>
    </div>
  </article>
</stencila-article>
