rust/codec-html/src/snapshots/encode_nodes@parameter-boolean.json.snap
---
source: rust/codec-html/src/encode.rs
expression: html
input_file: fixtures/nodes/parameter-boolean.json

---
<stencila-parameter data-itemscope="root" itemtype="http://schema.stenci.la/Parameter" itemscope>
  <label data-itemprop="name" slot="name" for="input-id">par</label>
  <meta itemprop="validator" itemtype="http://schema.stenci.la/BooleanValidator" itemscope/>
  <meta itemprop="value" itemtype="http://schema.stenci.la/Boolean" itemscope content="true"/>
  <input id="input-id" slot="value" type="checkbox" value="true" checked=""/>
</stencila-parameter>
