rust/codec-html/src/snapshots/encode_nodes@parameter-enum.json.snap
---
source: rust/codec-html/src/encode.rs
expression: html
input_file: fixtures/nodes/parameter-enum.json

---
<stencila-parameter data-itemscope="root" itemtype="http://schema.stenci.la/Parameter" itemscope>
  <label data-itemprop="name" slot="name" for="input-id">par</label>
  <meta itemprop="validator" itemtype="http://schema.stenci.la/EnumValidator" itemscope/>
  <meta itemprop="default" itemtype="http://schema.stenci.la/String" itemscope content="A"/>
  <meta itemprop="value" itemtype="http://schema.stenci.la/String" itemscope content="B"/>
  <select id="input-id" slot="value">
    <option value="A">A</option>
    <option value="B">B</option>
    <option value="C">C</option>
  </select>
</stencila-parameter>
