rust/codec-html/src/snapshots/encode_nodes@parameter-integer.json.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 481
expression: html
input_file: fixtures/nodes/parameter-integer.json
---
<stencila-parameter data-root itemtype="https://schema.stenci.la/Parameter" itemscope mode="write">
  <label data-prop="name" slot="name" for="input-id">par</label>
  <meta itemprop="validator" itemtype="https://schema.stenci.la/IntegerValidator" itemscope/>
  <meta itemprop="defaultValue" itemtype="https://schema.org/Integer" itemscope content="42"/>
  <meta itemprop="value" itemtype="https://schema.org/Integer" itemscope content="50"/>
  <input id="input-id" slot="value" type="number" step="1" placeholder="42" value="50" size="3"/>
</stencila-parameter>
