rust/codec-html/src/snapshots/encode_nodes@parameter-number.json.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 481
expression: html
input_file: fixtures/nodes/parameter-number.json
---
<stencila-parameter data-root itemtype="https://schema.stenci.la/Parameter" itemscope>
  <label data-prop="name" slot="name" for="input-id">pars</label>
  <meta itemprop="validator" itemtype="https://schema.stenci.la/NumberValidator" itemscope/>
  <meta itemprop="defaultValue" itemtype="https://schema.org/Integer" itemscope content="42"/>
  <meta itemprop="value" itemtype="https://schema.org/Integer" itemscope content="50"/>
  <input id="input-id" slot="value" type="number" min="0" max="100" placeholder="42" value="50" size="3"/>
</stencila-parameter>
