rust/codec-html/src/snapshots/encode_nodes@quote-block.json.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 525
expression: html
input_file: fixtures/nodes/quote-block.json
---
<stencila-article data-root data-root="true">
  <article itemtype="https://schema.org/Article" itemscope>
    <div data-prop="content" slot="content">
      <blockquote itemtype="https://schema.stenci.la/QuoteBlock" itemscope>
        <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
          <span>Para one.</span>
        </p>
      </blockquote>
    </div>
  </article>
</stencila-article>
